# rust-ncc

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  cfg.json  cfg.toml
.idea_brian/: modules.xml  workspace.xml
.idea_brian/inspectionProfiles/: Project_Default.xml
animator/: Cargo.toml
animator/src/: data.rs  draw.rs  hardio.rs  lib.rs  main.rs  model.rs  ui.rs
avro-schema-derive/: Cargo.toml
avro-schema-derive/src/: avro_schema.rs  lib.rs  print.rs
blender/: animator.py  pkg-installer.py  viewer.blend
data_experiments/: nine_cell_adh_0_chem_att.json  sixteen_cell_adh_0_chem_att.json  sixteen_cell_adh_2_chem_att.json
dist-calc-test/: Cargo.toml
dist-calc-test/src/: main.rs
example_experiments/: 16_cell_example_with_chem_attr_and_adh.json  chem_attr_example.json  four_cell_example.json  pair_sep_example.json  py_comp_1_example.json  py_comp_2_example.json  two_cell_adh_example.json  two_cell_tough_adhesion.json
executor/: Cargo.toml
executor/src/: main.rs
experiments/: 2020-JUL-11-test.toml  four_cell_coa.json  four_cell_coa_12.json  four_cell_coa_12_cil_100.json  four_cell_coa_24.json  four_cell_coa_24_short.json  no_coa_if_cil_vol_ex_py_comp.json  no_coa_if_cil_vol_ex_py_comp_euler.json  no_coa_if_cil_vol_ex_py_comp_rkdp5.json  one_cell.json  one_cell.toml  one_cell_euler.json  one_cell_no_rac_rand.json  one_cell_rk.json  one_cell_with_rac_rand.json  pair_2_long.toml  pair_2_short.toml  pair_sep.json  py_comp_1.json  py_comp_1_euler.toml  py_comp_1_long.toml  py_comp_1_short.toml  py_comp_2.json  py_comp_2_long.toml  py_comp_2_long_reduced_cil.toml  py_comp_2_rkdp5.toml  py_comp_2_short.toml  py_comp_4.json  py_comp_pair_coa_12.json  py_comp_pair_coa_24.json  two_cell.json  two_cell_coa_12.json  two_cell_coa_12_rf.json  two_cell_coa_24.json  two_cell_coa_24_long.json  two_cell_coa_24_rf.json  two_cell_coa_5.json  two_cell_coa_5_rf.json  two_cell_euler_coarse.json  two_cell_euler_fine.json  (+8 more)
interface/: Cargo.toml
interface-v0/: Cargo.toml
interface-v0/src/: app_state.rs  artist.rs  canvas.rs  delegate.rs  main.rs  poly.rs  polygon.rs  utils.rs  view.rs
interface/src/: animator.rs  app_state.rs  data.rs  delegate.rs  main.rs  reader.rs  scene.rs  view.rs
model-comparison/: retrieve.py
modify-derive/: Cargo.toml
modify-derive/src/: lib.rs
output/: dat.avro  probe.py  probing.py  schema.avsc
output/model_comparison/: comparator.py
override-derive/: Cargo.toml
override-derive/src/: lib.rs
playground/: Cargo.toml
playground/async_bincode/: Cargo.toml
playground/bincode_read/: Cargo.toml
playground/bincode_read/src/: main.rs
playground/cbor_read_write/: Cargo.toml
playground/cbor_read_write/src/: main.rs
playground/json_tests/: Cargo.toml  one_cell.json  pair_sep.json
playground/json_tests/src/: main.rs
playground/modify_derive_test/: Cargo.toml
playground/modify_derive_test/src/: main.rs
playground/output/: probing.py
playground/src/: macro_out.rs  main.rs
playground/src/utils/: avro.rs
py-wrapper/: Cargo.toml
py_model/: cell.py  chemistry.py  dynamics.py  environment.py  experiment_templates.py  geometry.py  hardio.py  main.py  mechanics.py  parameters.py  utilities.py
python_scripts/: animate.py  cil_test_plots.py  comparator.py  plot.py  probe.py
python_scripts/comp_geom_tests/: comp_geom.py
python_scripts/model-comparison/: graph.py  graph2.py  graph3.py  graph_help.py
python_scripts/visualization/: plot.py
scripts/: adh_function_tester.py  centroid_playground.py  expander.py  get_cbor.py  get_comp.py  hardio.py  make_anim.py  paint_opts.py  plot_test.py  py_comp_data.py  requirements.txt  run_only_py.py  shared_sim_data.py  sim_data.py  test.py  test_combined_rust.py  test_euler_int_step.py  test_py_comp.py  test_rk.py  test_rk_vs_euler.py  test_rust.py  test_rust_ct.py  utils.py  vol_ex_viewer.py
scripts/model-comparison/: animate.py  graph2.py  graph_help.py  list_of_errors.txt  retrieve.py  validate.py
scripts/visualization/: main.py  paint_opts.py  sim_data.py
scripts/vol_ex/: grapher.py  grapher_edges.py
simulator/: Cargo.toml  LICENSE-MIT
simulator/benches/: lseg_intersect.rs  lseg_poly_intersect.rs  n_cells.rs
simulator/examples/: four_cell.rs
simulator/src/: lib.rs  main.rs
simulator/src/cell/: chemistry.rs  delta_cell.rs  mechanics.rs  mod.rs  rkdp5.rs  states.rs
simulator/src/exp_setup/: defaults.rs  exp_parser.rs  markers.rs  mod.rs  n_cells.rs  pair.rs  py_compare.rs
simulator/src/hardio/: mod.rs  py_comp.rs
simulator/src/interactions/: dat_4d.rs  dat_sym2d.rs  dat_sym4d.rs  dat_utils.rs  gen_bdry.rs  gen_chemoa.rs  gen_coa.rs  gen_phys.rs  mod.rs
simulator/src/math/: geometry.rs  mod.rs  radians.rs  v2d.rs
simulator/src/parameters/: mod.rs  quantity.rs
simulator/src/toml_parse/: mod.rs
simulator/src/utils/: display.rs  mod.rs  normal.rs  pcg32.rs
simulator/src/world/: mod.rs  py_comp.rs
src/: cell.rs  chemistry.rs  consts.rs  experiment.rs  lib.rs  main.rs  mat2d.rs  math.rs  mechanics.rs  parameters.rs  quantity.rs  random.rs  rkdp5.rs  schema.rs  utils.rs  world.rs
src/animator/: mod.rs
src/benches/: lseg_intersect.rs  lseg_poly_intersect.rs  n_cells.rs
src/cell/: chemistry.rs  core_state.rs  geometry.rs  mechanics.rs  mod.rs  py_compare.rs  pycomp.rs  rkdp5.rs  state.rs  states.rs
src/experiments/: adh.rs  adh2.rs  cal_test.rs  cil.rs  cil_test.rs  four.rs  four_cells.rs  mod.rs  model_compare.rs  n_cells.rs  pair.rs  pairs.rs  separated_pair.rs  separeted_pair.rs  single.rs
src/hardio/: mod.rs  py_compare.rs  pycomp.rs
src/interactions/: dat2d.rs  dat4d.rs  dat_2d.rs  dat_4d.rs  dat_sym2d.rs  dat_sym4d.rs  dat_utils.rs  gen_bdry.rs  gen_chemoa.rs  gen_coa.rs  gen_phys.rs  mod.rs  symdat2d.rs  symdat4d.rs  utils.rs
src/math/: geometry.rs  matrices.rs  mod.rs  p2d.rs  radians.rs  v2d.rs
src/model_cell/: chemistry.rs  core_state.rs  mechanics.rs  mod.rs  rkdp5.rs
src/parameters/: mod.rs  quantity.rs
src/utils/: avro.rs  display.rs  mod.rs  normal.rs  pcg32.rs
src/world/: hardio.rs  interactions.rs  mod.rs  py_compare.rs
