[workspace]
members = [
    "simulator",
    "executor",
    "modify-derive",
]
default-members = ["executor"]
exclude = [
    "./playground/async_bincode",
    "./playground/cbor_read_write",
    "./playground/bincode_read",
    "./playground/modify_derive_test",
    "./playground/json_tests",
]

[profile.release]
debug = true