[package]
name = "animator"
version = "0.1.0"
authors = ["bhmerchant@gmail.com <bhmerchant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15.0"
lazy_static = "1.4.0"
rust-ncc = { path = "../", version = "0.1" }

