[package]
name = "dist-calc-test"
version = "0.1.0"
authors = ["Brian Merchant <bhmerchant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"
half = "1.6.0"
dashmap = "3.11.4"
rand = "0.7.3"
