[package]
name = "interface"
version = "0.1.0"
authors = ["bhmerchant@gmail.com <bhmerchant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7.0", features = ["im"]}
simulator = { version = "0.1", path = "../simulator" }
log = "0.4.11"
simple_logger = { version = "1.9.0", default-features = false }
bincode = "1.3.1"
crossbeam = "0.8.0"
