[package]
name = "playground"
version = "0.1.0"
authors = ["bhmerchant@gmail.com <bhmerchant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15.0"
nannou_timeline = "0.15.0"
pitch_calc = "0.12.0"
time_calc = "0.13.0"
