[package]
name = "playground"
version = "0.1.0"
authors = ["bhmerchant@gmail.com <bhmerchant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.2"
serde = { version = "1.0.118", features = ["derive"] }
bincode = "1.3.1"
