[package]
name = "playground"
version = "0.1.0"
authors = ["bhmerchant@gmail.com <bhmerchant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.2"
serde = { version = "1.0.118", features = ["derive"] }
bincode = "1.3.1"
rust-ncc = { version = "0.1.0", path = "../"}
serde_cbor = "0.11.1"

[[bin]]
name = "async_bincode"
path = "src/bin/async_bincode.rs"

[[bin]]
name = "bincode_read"
path = "src/bin/bincode_read.rs"

[[bin]]
name = "cbor_read_write"
path = "src/bin/cbor_read_write.rs"

