[package]
name = "simulator"
version = "0.1.0"
authors = ["Brian Merchant <bhmerchant@gmail.com>, Ezgi Soylemezoglu <ezgisoylemezoglu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.3"
rand_core = "0.6.1"
rand_distr = "0.4.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
bincode = "1.3.1"
serde_cbor = "0.11.1"
modify-derive = { path = "../modify-derive" }
once_cell = "1.7.2"

[dev-dependencies]
rand_pcg = "0.3.0"
criterion = "0.3.4"

#[[bench]]
#name = "lseg_intersect"
#harness = false
#path = "src/benches/lseg_intersect.rs"
#
#[[bench]]
#name = "lseg_poly_intersect"
#harness = false
#path = "src/benches/lseg_poly_intersect.rs"

[[bench]]
name = "n_cells"
harness = false
path = "benches/n_cells.rs"

[features]
validate = []


