[package]
name = "simulator"
version = "0.1.0"
authors = ["Brian Merchant <bhmerchant@gmail.com>"]
edition = "2018"

[lib]
name = "simulator"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
rand_core = "0.6.3"
rand_distr = "0.4.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
bincode = "1.3.3"
serde_cbor = "0.11.2"
modify-derive = { path = "../modify-derive" }
once_cell = "1.12.0"
log = "0.4.17"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"

[dev-dependencies]
rand_pcg = "0.3.1"
criterion = "0.3.5"

[features]
trace = []
debug_volex = []
validate = []

#[[bench]]
#name = "lseg_intersect"
#harness = false
#path = "src/benches/lseg_intersect.rs"
#
#[[bench]]
#name = "lseg_poly_intersect"
#harness = false
#path = "src/benches/lseg_poly_intersect.rs"
#
#[[bench]]
#name = "n_cells"
#harness = false
#path = "benches/n_cells.rs"





